# cometscqc

./: CMakeLists.txt  Makefile  README.md  main.cpp  reference.dox
atlas/: CMakeLists.txt  main.cxx
atlas/include/: XCOMETConstruction.h
atlas/src/: CMakeLists.txt  XCOMETConstruction.cxx
comet/: CMakeLists.txt  main.cxx
comet/include/: XCOMETConstruction.h
comet/src/: CMakeLists.txt  XCOMETConstruction.cxx
cython/: checkfiles.py  demo.py  demoforroot.py  setup.py
cython/package/: XPostLoading.pyx  XPostOutput.pyx  XPostQuenchOut.pyx  XPostRootLoad.pyx  XRootFiles.pyx
include/: IFdmUnits.hpp  XCoilBase.hpp  XCoilConductor.hpp  XCoilHandle.hpp  XCoilShell.hpp  XCoilStrip.hpp  XFieldHandle.hpp  XInitialTemperature.hpp  XMagneticField.hpp  XMatAl5083.hpp  XMatAluminium.hpp  XMatCopper.hpp  XMatG10.hpp  XMatKapton.hpp  XMatNbTi.hpp  XMatStainless.hpp  XMaterial.hpp  XMeshLoop.hpp  XPlotMaterial.hpp  XPostField.hpp  XPostInfoPlot.hpp  XProcessHandle.hpp  XProcessManager.hpp  XQuenchExcept.hpp  XQuenchInfo.hpp  XQuenchLogger.hpp  XQuenchMiits.hpp  XQuenchOutput.hpp  XQuenchStacking.hpp  XQuenchTransient.hpp  XRadiationHandle.hpp  XRootOutput.hpp  XThermalSolver.hpp  XTransientLoop.hpp
src/: CMakeLists.txt  XCoilBase.cpp  XCoilConductor.cpp  XCoilHandle.cpp  XCoilShell.cpp  XCoilStrip.cpp  XFieldHandle.cpp  XInitialTemperature.cpp  XMagneticField.cpp  XMatAl5083.cpp  XMatAluminium.cpp  XMatCopper.cpp  XMatG10.cpp  XMatKapton.cpp  XMatNbTi.cpp  XMaterial.cpp  XMeshLoop.cpp  XPlotMaterial.cpp  XPostField.cpp  XPostInfoPlot.cpp  XProcessHandle.cpp  XProcessManager.cpp  XQuenchExcept.cpp  XQuenchInfo.cpp  XQuenchLogger.cpp  XQuenchMiits.cpp  XQuenchOutput.cpp  XQuenchTransient.cpp  XRadiationHandle.cpp  XRootOutput.cpp  XThermalSolver.cpp  XTransientLoop.cpp
